force-app/main/default/objects/Campaign/fields/Budget_Used__c.field-meta.xml
<CustomField>
    <fullName>Budget_Used__c</fullName>
    <label>Budget Used</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
    <visibilityPublic</visibilityPublic>
</CustomField>