force-app/main/default/objects/Campaign/fields/Cost_Per_Lead__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Lead__c</fullName>
    <label>Cost Per Lead</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
    <visibilityPublic</visibilityPublic>
</CustomField>