force-app/main/default/objects/Campaign/fields/Total_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Members__c</fullName>
    <label>Total Members</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
    <visibilityPublic</visibilityPublic>
</CustomField>