force-app/main/default/objects/Campaign/fields/Total_Revenue_Generated__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_Generated__c</fullName>
    <label>Total Revenue Generated</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
    <visibilityPublic</visibilityPublic>
</CustomField>